Sun Aug 19 21:00:20 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l: Skip over .ft font change requests, and the .Vb and
	  .Ve definitions used by pod2man to begin and end verbatim mode.
	  This handles some POD-generated pages better.

Sun Aug 19 20:48:42 BST 2007  Colin Watson  <cjwatson@debian.org>

	Truncate apropos/whatis output to the terminal width by default
	(thanks, Dan Jacobson; Debian bug #411721).

	* lib/linelength.c: New file for terminal line length detection,
	  split out from src/man.c. Unlike the previous implementation, this
	  does its own memoisation rather than requiring explicit
	  initialisation.
	* lib/linelength.h: Prototype get_line_length.
	* lib/Makefile.in: Always compile linelength.c.
	* src/man.c (line_length, store_line_length): Remove.
	  (get_roff_line_length): Use get_line_length.
	  (main): We no longer need to call store_line_length.
	* src/whatis.c (args, long_options, main): New -l/--long option.
	  (usage): Document it.
	  (display): Truncate names and descriptions to fit within the
	  terminal width.
	* man/man1/apropos.man1 (SYNOPSIS, OPTIONS, ENVIRONMENT): Document
	  --long and the MANWIDTH override.
	* man/man1/whatis.man1 (SYNOPSIS, OPTIONS, ENVIRONMENT): Likewise.
	* docs/NEWS: Document this.

Tue Jun 26 10:48:45 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/de_DE.88591/man1/man.man1 (UMGEBUNG),
	  man/de_DE.88591/man8/catman.man8 (BESCHREIBUNG): MANSEC -> MANSECT
	  (thanks, Holger Kubiak; Debian bug #430635).

Mon Jun 18 10:19:22 BST 2007  Colin Watson  <cjwatson@debian.org>

	* lib/cleanup.c (do_cleanups): Split out signal-safe processing ...
	  (do_cleanups_sigsafe): ... here.
	  (sighandler): Call do_cleanups_sigsafe rather than do_cleanups.
	  (push_cleanup): Add sigsafe argument to allow cleanup functions to
	  be flagged as non-signal-safe (e.g. freeing memory).
	* lib/cleanup.h: Update prototypes.
	* libdb/db_gdbm.c (man_gdbm_firstkey): hash_free cleanup is not
	  signal-safe.