@@ -16,6 +16,13 @@ Major changes since man-db 2.4.4:
 	  default. As with man, this may be overridden using the MANWIDTH
 	  environment variable.
 
+	o lexgrog now ignores alleged manual page names containing spaces,
+	  as these usually indicate parsing errors or ill-formed NAME
+	  sections and they clutter up apropos output badly. I'm only aware
+	  of one legitimate counterexample, the Intercal compiler "oo, ick",
+	  which no longer appears to be known by that name anyway; let me
+	  know if there are any others.
+
 man-db 2.4.4 (12 February 2007)
 ===============================
 
