@@ -1,3 +1,10 @@
+Sun Aug 19 21:04:24 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/descriptions.c (parse_descriptions): Skip name tokens
+	  containing whitespace, as they are almost never useful as manual
+	  page names.
+	* man/man1/lexgrog.1 (WHATIS PARSING), docs/NEWS: Document this.
+
 Sun Aug 19 21:00:20 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/lexgrog.l: Skip over .ft font change requests, and the .Vb and
